Try to fix a problem that doesn't have a color reversal in dark mode on iOS (using cssbrowserselector.js)

--- a/assets/styles/sass/common.sass
+++ b/assets/styles/sass/common.sass
@@ -76,6 +76,12 @@ header
     img
       width: 100%
 
+.iphone.safari3
+  header
+    #logo
+      img
+        filter: invert(100%)
+
 // container
 #container
   width: 100%
